--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,19 @@
           "src": "/(.*)",
           "dest": "server.js"
         }
-    ]
+    ],
     
+      "headers": [
+        {
+          "source": "/(.*)",
+          "headers": [
+            {
+              "key": "access-control-allow-origin",
+              "value": "*"
+            }
+          ]
+        }
+      ]
     
   }
   
